@@ -1,4 +1,4 @@
-.\" RCSid "$Id: rcontrib.1,v 1.10 2014/07/19 18:19:33 greg Exp $"
+.\" RCSid "$Id: rcontrib.1,v 1.11 2014/07/22 21:55:31 greg Exp $"
 .TH RCONTRIB 1 5/25/05 RADIANCE
 .SH NAME
 rcontrib - compute contribution coefficients in a RADIANCE scene
@@ -306,4 +306,5 @@ RAYPATH		path to search for \-f and \-M files
 Greg Ward
 .SH "SEE ALSO"
 cnt(1), genklemsamp(1), getinfo(1), pcomb(1), pfilt(1), ra_rgbe(1),
-rcalc(1), rpict(1), rsensor(1), rtrace(1), total(1), vwrays(1), ximage(1)
+rcalc(1), rfluxmtx(1), rmtxop(1),
+rpict(1), rsensor(1), rtrace(1), total(1), vwrays(1), ximage(1)
