@@ -1,4 +1,4 @@
-.\" RCSid "$Id: rmtxop.1,v 1.1 2014/05/31 21:33:21 greg Exp $"
+.\" RCSid "$Id: rmtxop.1,v 1.2 2014/07/22 21:55:31 greg Exp $"
 .TH RMTXOP 1 7/8/97 RADIANCE
 .SH NAME
 rmtxop - concatenate, add, transpose, scale, and convert matrices
@@ -142,4 +142,4 @@ rmtxop -fa orig.mtx | rcollate -ho -oc 1 | rcalc [opertions]
 Greg Ward
 .SH "SEE ALSO"
 cnt(1), histo(1), neaten(1), rcalc(1), rcollate(1),
-rlam(1), tabfunc(1), total(1)
+rcontrib(1), rfluxmtx(1), rlam(1), tabfunc(1), total(1)
